--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="apple-touch-icon" href="/logo.jpg" />
+    <link rel="shortcut icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ENTstore</title>
+    <meta name="description" content="ENNC - Premium clothing and fashion store" />
+    <meta name="author" content="ENNC" />
+    <meta property="og:title" content="ENNC - Premium Clothing Store" />
+    <meta property="og:description" content="Discover premium clothing and fashion at ENNC" />
+    <meta property="og:type" content="website" />
+    <title>ENNC</title>
   </head>
   <body>
     <div id="root"></div>
